fortran/ PR fortran/20467 * symbol.c (check_conflict): A dummy argument can't be a statement function.

testsuite/
PR fortran/20467
* gfortran.dg/stfunc_2.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@96443 138bc75d-0d04-0410-961f-82ee72b054a4